# invariance-python

./: .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  e2e-nightly.yml
docs/: 01-sdk-design.md
examples/: instrument_run.py
src/invariance/: __init__.py  _internal.py  _query.py  _retry.py  _types.py  agents.py  ask.py  async_client.py  client.py  config.py  crypto.py  findings.py  handoff_token.py  kb.py  monitors.py  narratives.py  node_types.py  nodes.py  proofs.py  replay.py  reviews.py  runs.py  signals.py  trace.py
src/invariance/providers/: __init__.py  anthropic.py  openai.py  pricing.py
tests/: test_ask.py  test_async.py  test_crypto.py  test_handoff_replay.py  test_init.py  test_integration.py  test_kb.py  test_monitors.py  test_narratives.py  test_node_types.py  test_parity.py  test_requests.py  test_resources.py  test_retry.py  test_signals.py  test_steps.py
