[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invariance-sdk"
version = "0.0.0"
description = "Clean MVP Python SDK for Invariance."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Invariance" }]
dependencies = ["httpx>=0.27", "pynacl>=1.5"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/invariance"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

